--- a/index.html
+++ b/index.html
@@ -17,14 +17,23 @@
         </header>
 
         <section class="score-panel">
-        	<ul class="stars">
-        	</ul>
-
-        	<span class="moves">0</span> Moves
+        
+            Moves: <span class="moves">0</span> 
+            Stars: 
+            <ul class="stars"> 
+                <li><i class="fa fa-star"></i></li>
+                <li><i class="fa fa-star"></i></li>
+                <li><i class="fa fa-star"></i></li>
+            </ul>
 
             <div class="restart">
         		<i class="fa fa-repeat"></i>
-        	</div>
+            </div>
+
+            <div class="timer-container">
+                Time: <span id="hours">00</span>:<span id="minutes">00</span>:<span id="seconds">00</span>
+            </div>
+
         </section>
 
         <ul class="deck">
